Reworked reflections and some of its integrations throughout the lib